--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "py-logex"
+name = "py-logex-enhanced"
 version = "0.1.0"
 description = "Simple, powerful logging with built-in exception handling and YAML configuration"
 readme = "README.md"
